# sparrow

./: CMakeLists.txt  README.md
include/: sparrow.h
tests/: custom_class.cc  empty_class.cc  move_constructor.cc  person_example.cc  trivial_class.cc
